--- a/styles_e.css
+++ b/styles_e.css
@@ -1,18 +1,56 @@
-body{
-	background:#494054;	
-	overflow-x:hidden;
-	overflow-y: hidden;
-	margin: 0px;
-	padding: 0px
+* {
+    box-sizing: border-box;
 }
+body {
+    font-family: Comic Sans MS;
+     background:#a295b1; 
+     margin: 0;
+
+
+}
+
+ .letter {
+    display: inline-block;
+    list-style: none;
+    width: 20px;
+    margin: 0 5px;
+    border-bottom: 1px solid black;
+    text-align: center;
+    color: #a295b1; 
+    
+}
+.current-word {
+    list-style: none;
+}
+.output {
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+.correct {
+    background-color: #494054;
+    transition: all 1s ease;
+}
+.error {
+    color: red;
+    opacity: 1;
+}
+.warning {
+    color: orange;
+    opacity: 1;
+}
+.win {
+    color: green;
+    opacity: 1;
+}
+
 .bg{
-	position: fixed;
-	z-index: -100;
-	width:100%; 
-	height:100%;
+    position: absolute;
+    z-index: -100;
+    width:100%; 
+    height:100%;
 }
 .mirror{
-	position: absolute;
-	right: 50px;
-	top:100px;
+    position: absolute;
+    right: 50px;
+    top:500px;
 }
